--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "mongodb": "^3.0.2",
     "mongoose": "^4.13.2",
     "react": "^16.0.0",
     "react-beautiful-dnd": "^2.5.0",
