--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "assignment_5",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
